[gd_scene load_steps=6 format=3 uid="uid://dduknsag247ho"]

[ext_resource type="Script" path="res://map/map_node/map_node.gd" id="1_h0l20"]
[ext_resource type="Resource" uid="uid://cd46h582aqct5" path="res://map/map_events.tres" id="2_xsw4d"]
[ext_resource type="Texture2D" uid="uid://dd8unksh6f3xq" path="res://map/textures/market.png" id="4_j8ftk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5shll"]
size = Vector2(64, 64)

[node name="MapNode" type="Node2D"]
position = Vector2(928, 480)
script = ExtResource("1_h0l20")
map_node_resource = ExtResource("2_1vsyu")
map_events = ExtResource("2_xsw4d")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_j8ftk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5shll")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
